data/all_generated_tests/raw_wast_tests/loop_EdgeCaseFailuresinbr_table_1088.wast
;; 9. **Test Description**:    - Design a loop with a deeply nested `br_table` whose branch targets include indirect jumps within nested structures. The test examines how the engine handles index out-of-bounds scenarios in such deeply nested contexts.    - **Constraint Checked**: Proper handling of indirect jumps within deep nested structures using `br_table` and correct default target handling for out-of-bounds indices.

(assert_invalid
  (module 
    (func $deep_br_table
      (block 
        (loop 
          (block 
            (br_table 1 2 0 (i32.const 5))
          )
        )
      ) 
      (i32.const 0)
    )
  )
  "index out of bounds in br_table"
)